--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/copyright.png" alt="" /></a>
+									<a href="https://898acf.com/guide/" class="image"><img src="images/copyright.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Derivate Works Guideline</h2>
 										<p>
