--- a/guide/index.html
+++ b/guide/index.html
@@ -58,7 +58,7 @@
 									<p><b >
 <h3>I. Abstract</h3>
     1. Cover<br/>
-                                        If the song is created by only #898ACF members, you can cover it in non-commercial way without a contact if revealing the credit. Please use the tag #898ACFCOVER if possible, and please notice you cannot cover without #898ACFCOVER tag if you don't use our official instrumental version. In addition, even if it is non-commercial work, distribution your cover by streaming and download services are strictly not allowed without a contact.<br/><br/>
+                                        If the song is created by only #898ACF members, you can cover it in non-commercial way without a contact if revealing the credit. Please use the tag #898ACFCOVER if possible, and please notice you cannot cover without #898ACFCOVER tag if you don't use our official instrumental version. In addition, even if it is non-commercial work, distribution of your cover by streaming and download services are strictly not allowed without a contact.<br/><br/>
     2. Embedding the music in the Youtube video<br/>
                                         If the song is created by only #898ACF members, you can embed it on Youtube video without a contact if revealing the credit. But, if it contains the vocal of IA AI, you should obey the guideline provided by the '1st Place'(<a href="https://1stplace.co.jp/voice_character_rule-pdf">Link</a>). Please use the tag #898ACF if possible.<br/><br/>
     3. ETC<br/>
