--- a/disco/index.html
+++ b/disco/index.html
@@ -198,7 +198,7 @@
                             <h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://twitter.com/898ACF_Official" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="https://www.youtube.com/channel/UCMoXVuUYI3PbzKvfCQUIwDg" class="icon brands style2 fa-youtube"><span class="label">Youtube</span></a></li>
                                     <li><a href="https://instagram.com/898acf_official" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
                                     <li><a href="https://www.tiktok.com/@898acf_official" class="icon brands style2 fa-tiktok"><span class="label">Tiktok</span></a></li>
 								</ul>
