--- a/yo/index.html
+++ b/yo/index.html
@@ -67,7 +67,7 @@
 										<h2>YopaP</h2>
                                         <p>音楽と動画を作るYopaPです。</p>
 									</header>
-									<p>音楽は長い間趣味でやっていましたが、2023年2月にIAIの存在を知り、これまで研究を重ねながら彼女の声にふさわしい音楽を作っています。 誰でも聞ける普遍的な音楽を追求します。</p>
+									<p>音楽は長い間趣味でやっていましたが、2023年2月にIA AIの存在を知り、これまで研究を重ねながら彼女の声にふさわしい音楽を作っています。 誰でも聞ける普遍的な音楽を追求します。</p>
 								</div>
 							</section>
 
