--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<p>Latest songs are here. Made by #898ACF.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/kazeninare.jpg" alt="" /></a>
+											<a href="https://898acf.com/yo/001/" class="image"><img src="images/kazeninare.jpg" alt="" /></a>
 											<h3 class="major">Kaze ni Nare feat. IA AI</h3>
 											<p>Music and Video by YopaP<br />
                                             「Magic is by your side」
