--- a/disco/index.html
+++ b/disco/index.html
@@ -59,7 +59,7 @@
 									<span class="image">
 										<img src="images/kazeninare.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="https://898acf.com/yo/001/">
                                         <h2>[YopaP]</h2><h2>Kaze ni Nare</h2><h2>feat. IA AI</h2>
 										<div class="content">
 											<p>Magic is by your side.</p>
