--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="#">About Us</a></li>
 								<li><a href="#">Members</a></li>
-								<li><a href="#">Discography</a></li>
+								<li><a href="https://898acf.com/disco/">Discography</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
