--- a/disco/index.html
+++ b/disco/index.html
@@ -39,11 +39,11 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">Derivative Works Guideline</a></li>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Members</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="https://898acf.com/">Home</a></li>
+							<li><a href="https://898acf.com/guide/">Derivative Works Guideline</a></li>
+							<li><a href="https://898acf.com/898acf/">About Us</a></li>
+							<li><a href="https://898acf.com/members/">Members</a></li>
+							<li><a href="https://898acf.com/contact/">Contact</a></li>
 						</ul>
 					</nav>
 
