--- a/guide/index.html
+++ b/guide/index.html
@@ -32,9 +32,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="fa fa-home"><span class="label"></span></a></li>
-                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="https://898acf.com/" class="fa fa-home"><span class="label"></span></a></li>
+                        <li><a href="https://www.twitter.com/898ACF_Official" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCMoXVuUYI3PbzKvfCQUIwDg" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 					</ul>
 				</footer>
 			</section>
