--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							</section>
 							<ul class="contact">
 								<li class="icon brands fa-twitter"><a href="https://twitter.com/898ACF_Official">Twitter</a></li>
-                                <li class="icon brands fa-youtube"><a href="#">Youtube</a></li>
+                                <li class="icon brands fa-youtube"><a href="https://www.youtube.com/channel/UCMoXVuUYI3PbzKvfCQUIwDg">Youtube</a></li>
                                 <li class="icon brands fa-instagram"><a href="https://instagram.com/898acf_official">Instagram</a></li>
                                 <li class="icon brands fa-tiktok"><a href="https://www.tiktok.com/@898acf_official">TikTok</a></li>
 							</ul>
