--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/butterfly.png" alt="" /></a>
+									<a href="https://898acf.com/898acf/" class="image"><img src="images/butterfly.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Us</h2>
 										<p>#898ACF is a global creator group.<br />
@@ -81,7 +81,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/butterfly.png" alt="" /></a>
+									<a href="https://898acf.com/members/" class="image"><img src="images/butterfly.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Members</h2>
 										<p>Now, there are 2 Members in #898ACF.<br />
@@ -133,7 +133,7 @@
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="https://898acf.com/disco/" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section>
@@ -151,7 +151,7 @@
 									Contact / 問い合わせ / 문의<br />
 									English / 日本語 / 한국어
 								       </p>
-										<a href="#" class="special">CLICK HERE TO CONTACT</a>
+										<a href="https://898acf.com/contact/" class="special">CLICK HERE TO CONTACT</a>
 									</div>
 								</div>
 							</section>
