--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Members</a></li>
+								<li><a href="https://898acf.com/898acf/">About Us</a></li>
+								<li><a href="https://898acf.com/members/">Members</a></li>
 								<li><a href="https://898acf.com/disco/">Discography</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="https://898acf.com/contact/">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
