--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<h2 class="major">About Us</h2>
 										<p>#898ACF is a global creator group.<br />
                                         チーム紹介 / 팀 소개</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://898acf.com/898acf/" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -86,7 +86,7 @@
 										<h2 class="major">Members</h2>
 										<p>Now, there are 2 Members in #898ACF.<br />
                                         メンバー紹介 / 멤버 소개</p>
-										<a href="#" class="special">Who's Here</a>
+										<a href="https://898acf.com/members/" class="special">Who's Here</a>
 									</div>
 								</div>
 							</section>
@@ -105,7 +105,7 @@
                                             <br />
                                             Released August 8 2023. House style.
                                             </p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://898acf.com/yo/001/" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/comingsoon.jpg" alt="" /></a>
@@ -143,7 +143,7 @@
 				<!-- Footer -->
 					<section id="three" class="wrapper spotlight style5">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/butterfly.png" alt="" /></a>
+									<a href="https://898acf.com/contact/" class="image"><img src="images/butterfly.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Contact</h2>
 										<p>
