--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -34,10 +34,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="fa fa-home"><span class="label"></span></a></li>
-                        <li><a href="#" class="fa fa-music"><span class="label"></span></a></li>
-						<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-						<li><a href="#"><span class="label">Niconico</span></a></li>
+						<li><a href="https://898acf.com/" class="fa fa-home"><span class="label"></span></a></li>
+                        <li><a href="https://feature.fm/" class="fa fa-music"><span class="label"></span></a></li>
+						<li><a href="https://youtu.be/sHd9Xw59Ack" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="https://nicovideo.jp/sm42532852/"><span class="label">Niconico</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -63,7 +63,7 @@
                                     そこからこの曲が始まりました。たまには化物にも、たまには奇跡にもなれる全てが魔法です。<br />
                                     出来れば、奇跡になってほしいです。<br />
                                     
-                                        <h3>Stream and Download</h3><a href="">CLICK HERE</a><br /><br />
+                                        <h3>Stream and Download</h3><a href="#">CLICK HERE</a><br /><br />
                                     <h3>MV</h3>
                                     [Youtube]<br />
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/sHd9Xw59Ack" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br /><br />
@@ -227,7 +227,7 @@ Go forward<br/><br/>
 								<div class="container">
 									<header class="major">
 										<h2>How to Cover and Use</h2>
-										<p><a href="http://html5up.net">CLICK HERE TO COVER AND USE</a>.</p>
+										<p><a href="http://898acf.com/guide/">CLICK HERE TO COVER AND USE</a>.</p>
 									</header>
 								</div>
 							</section>
