--- a/yo/index.html
+++ b/yo/index.html
@@ -28,6 +28,7 @@
 						<li><a href="#one" class="active">Introduction</a></li>
 						<li><a href="#two">ご紹介</a></li>
 						<li><a href="#three">소개</a></li>
+						<li><a href="#four">Discography</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -80,6 +81,16 @@
 										<p>음악과 영상을 만드는 YopaP입니다.</p>
 									</header>
 									<p>음악은 오랫동안 취미로 하고 있었는데, 2023년 2월에 IA AI의 존재를 알게 되어 지금까지 연구를 거듭하면서 그에 어울리는 음악을 만들고 있습니다. 누구나 들을 수 있는 보편적인 음악을 추구합니다.</p>
+								</div>
+							</section>
+                        
+                        						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<header class="major">
+										<h2>Discography</h2>
+									</header>
+									<p>[2023. 08. 08] Kaze ni Nare (feat. IA AI) - Music & Video</p>
 								</div>
 							</section>
                         
