--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -37,7 +37,7 @@
 						<li><a href="https://898acf.com/" class="fa fa-home"><span class="label"></span></a></li>
                         <li><a href="https://feature.fm/" class="fa fa-music"><span class="label"></span></a></li>
 						<li><a href="https://youtu.be/sHd9Xw59Ack" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-						<li><a href="https://nicovideo.jp/sm42532852/"><span class="label">Niconico</span></a></li>
+						<li><a href="https://www.nicovideo.jp/watch/sm42532852"><span class="label">Niconico</span></a></li>
 					</ul>
 				</footer>
 			</section>
