--- a/members/index.html
+++ b/members/index.html
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="https://898acf.com/">Home</a></li>
-							<li><a href="https://898acf.com/disco/">Derivative Works Guideline</a></li>
+							<li><a href="https://898acf.com/guide/">Derivative Works Guideline</a></li>
 							<li><a href="https://898acf.com/898acf/">About Us</a></li>
 							<li><a href="https://898acf.com/disco/">Discography</a></li>
 							<li><a href="https://898acf.com/contact/">Contact</a></li>
