--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<p>
 									We are waiting for your derivate works. <br />
 									二次創作ガイドライン / 2차 창작 가이드라인</p>
-										<a href="#" class="special">Click Here</a>
+										<a href="https://898acf.com/guide/" class="special">Click Here</a>
 									</div>
 								</div>
 							</section>
