--- a/guide/index.html
+++ b/guide/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/Butterfly.png" alt="" /></span>
+					<span class="image avatar"><img src="images/butterfly.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Derivative Works Guideline</a></h1>
 					<p>二次創作ガイドライン<br />
 					2차 창작 가이드라인
