yo001 Youtube Size

--- a/guide/index.html
+++ b/guide/index.html
@@ -18,9 +18,9 @@
 				<header>
 					<span class="image avatar"><img src="images/butterfly.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Derivative Works Guideline</a></h1>
-					<p>二次創作ガイドライン<br />
-					2차 창작 가이드라인
-                    </p>                    
+                    <h4>二次創作ガイドライン</h4>
+					<h4>2차 창작 가이드라인</h4>
+                    <p></p>                    
 				</header>
 				<nav id="nav">
 					<ul>
