--- a/or/index.html
+++ b/or/index.html
@@ -17,10 +17,10 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/profile.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">ORIONI</a></h1>
-					<p>Team Leader<br />
-					3D Video Creator<br />
-                    Music Creator
+					<h1 id="logo"><a href="#">ORIONI</a></h1><br/>
+					<p><h5>Team Leader</h5>
+					<h5>3D Video Creator</h5>
+                    <h5>Music Creator</h5>
                     </p>                    
 				</header>
 				<nav id="nav">
