--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -17,10 +17,10 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/cover.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Kaze ni Nare</a></h1>
-					<p>Music / Video : YopaP<br />
-					Mix / Master : ORIONI<br />
-                        Vocal : IA [CeVIO AI]
+					<h1 id="logo"><a href="#">Kaze ni Nare</a></h1><br/>
+					<h5>Music / Video : YopaP</h5>
+					<h5>Mix / Master : ORIONI</h5>
+                        <h5>Vocal : IA [CeVIO AI]</h5>
                     </p>                    
 				</header>
 				<nav id="nav">
