--- a/yo/index.html
+++ b/yo/index.html
@@ -17,10 +17,10 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/profile.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">YopaP</a></h1>
-					<p>Music Creator<br />
-					3D Video Creator<br />
-                    Vocaloid Producer
+					<h1 id="logo"><a href="#">YopaP</a></h1><br/>
+					<p><h5>Music Creator</h5>
+					<h5>3D Video Creator</h5>
+                    <h5>Vocaloid Producer</h5>
                     </p>                    
 				</header>
 				<nav id="nav">
