--- a/guide/index.html
+++ b/guide/index.html
@@ -17,9 +17,9 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/butterfly.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Derivative Works Guideline</a></h1>
-                    <h4>二次創作ガイドライン</h4>
-					<h4>2차 창작 가이드라인</h4>
+					<h1 id="logo"><a href="#">Derivative Works Guideline</a></h1><br/>
+                    <h5>二次創作ガイドライン</h5>
+					<h5>2차 창작 가이드라인</h5>
                     <p></p>                    
 				</header>
 				<nav id="nav">
