--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -82,7 +82,7 @@
 										<h2>歌詞 (原曲)</h2>
 									</header>
 									<p>風になれ<br />
-目指しているのは遠過ぎるだけど<br />
+目指しているのは遠過ぎることだけど<br />
 君を信じること、諦めないこと<br />
 それで超えて行ける<br /><br />
 
@@ -93,7 +93,7 @@
 夢で見てたあの空を向いて<br /><br />
 
 風になれ<br />
-目指しているのは遠過ぎるだけど<br />
+目指しているのは遠過ぎることだけど<br />
 君を信じること、諦めないこと<br />
 それで超えて行ける<br /><br />
 
