--- a/898acf/index.html
+++ b/898acf/index.html
@@ -67,7 +67,7 @@
 										<h2>日本語</h2>
                                         <p>#898ACFはクリエイターグループです。</p>
 									</header>
-									<p>私たちは2022年11月5日に結成され、さまざまなジャンルの音楽を作っています。 各メンバーの性向が異なり、重なる部分が多いため、お互いに協業しながらシナジーを出すことができます。 誰もが聞ける音楽を追求しますが、実験的な音楽もしばしば試みる予定です。 いつも信じて聞ける音楽、聞きたい音楽を作っていきます。</p>
+									<p>私たちは2022年11月5日に結成され、さまざまなジャンルの音楽を作っています。 各メンバーの性向が異なり、重なる部分が多いため、お互いに協業しながらシナジーを出すことができます。 誰もが聞ける音楽を求めていますが、実験的な音楽もしばしば試みる予定です。 いつも信じて聞ける音楽、聞きたい音楽を作っていきます。</p>
 								</div>
 							</section>
 
