--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -63,7 +63,7 @@
                                     そこからこの曲が始まりました。たまには化物にも、たまには奇跡にもなれる全てが魔法です。<br />
                                     出来れば、奇跡になってほしいです。<br />
                                     
-                                        <h3>Stream and Download</h3><a href="#">CLICK HERE</a>
+                                        <h3>Stream and Download</h3><a href="https://898acf.com/yo/001/st/">CLICK HERE</a>
                             </p>
 								</div>
                         <div class="container" class="video-wrap">
