Inst link update

--- a/guide/index.html
+++ b/guide/index.html
@@ -230,7 +230,7 @@ inst_low_mix.wav : 오리지널 키에서 반음을 4번 내린 음원 파일입
 									<header class="major">
 										<h2>WAV Files Link</h2>
 									</header>
-									<p>[2023. 08. 08] YopaP - Kaze ni Nare feat. IA AI (<a href="https://898acf.com/notyet/">Link</a>)</p>
+									<p>[2023. 08. 08] YopaP - Kaze ni Nare feat. IA AI (<a href="https://898acf.com/yo/001/inst/">Link</a>)</p>
 								</div>
 							</section>
 
