--- a/guide/index.html
+++ b/guide/index.html
@@ -91,8 +91,8 @@ inst_low_mix.wav : This is a music file lowered from the original key four times
                                         "Non-commercial" means free busking, performance in an open place, etc.<br/>1) Take a video from the beginning to the end of the song, <br/>2) then upload the video to the official account of the subject (personal, group) or agency within a week of using it <br/>3) so that everyone can see it.</b><br/>If these three conditions are met at the same time, we allow them without contact. The upload location of the video is Twitter, and if you upload it to YouTube, please upload all or part of it on Twitter. You should contact us for commercial performances.<br/><br/>
 <b>5. Translations</b><br/>
                                         If there is the 'official' translations provided by #898ACF, please use it primarily. Otherwise, it is allowed without a contact if the context is as same as the original version.<br/><br/>
-<b>6. Guideline by the '1st Place'</b><br/>
-                                        If it contains the vocal of IA AI, you should obey the guideline provided by the '1st Place'(<a href="https://1stplace.co.jp/voice_character_rule-pdf">Link</a>). If your usage meets the guideline of #898ACF but doesn't meet that of the 1st Place, please contact them. <br/><br/>
+<b>6. Guideline by the 1st Place Co.,Ltd.</b><br/>
+                                        If it contains the vocal of IA AI, you should obey the guideline provided by the 1st Place Co.,Ltd.(<a href="https://1stplace.co.jp/voice_character_rule-pdf">Link - Japanese</a>). If your usage meets the guideline of #898ACF but doesn't meet that of the 1st Place, please contact them. <br/><br/>
 <b>7. Commercial Usage</b><br/>
     - We receive Youtube Content ID for Every songs created by #898ACF, so you can embed or cover the music in the Youtube and get profit without a contact.<br/>
     - You can simply play it on the business site without a contact.<br/><br/>
@@ -210,7 +210,7 @@ inst_low_mix.wav : 오리지널 키에서 반음을 4번 내린 음원 파일입
 <b>5. 번역</b><br/>
                                         #898ACF의 공식 번역이 있는 경우, 그 번역본을 최우선으로 사용해 주시기 바랍니다. 이외의 경우, 원곡과 내용이 동일하다면 문의 없이도 다른 언어로의 번역 또는 공식적으로 제공된 언어로의 번역을 허용합니다.<br/><br/>
 <b>6. 1st Place 님의 가이드라인 범위 관련</b><br/>
-                                        IA AI의 보컬이 들어간 상태로 사용하는 경우, IA AI의 제작사인 1st Place에서 제공하는 가이드라인(<a href="https://1stplace.co.jp/voice_character_rule-pdf">링크</a>)을 지킬 필요가 있습니다. 만약 #898ACF의 가이드라인은 만족하지만 1st Place님의 가이드라인 범위를 넘어 사용하시고자 하는 경우, 1st Place 님께 문의해 주십시오. <br/><br/>
+                                        IA AI의 보컬이 들어간 상태로 사용하는 경우, IA AI의 제작사인 1st Place에서 제공하는 가이드라인(<a href="https://1stplace.co.jp/voice_character_rule-pdf">링크 - 일본어</a>)을 지킬 필요가 있습니다. 만약 #898ACF의 가이드라인은 만족하지만 1st Place님의 가이드라인 범위를 넘어 사용하시고자 하는 경우, 1st Place 님께 문의해 주십시오. <br/><br/>
 <b>7. 상업적 사용</b><br/>
     - #898ACF의 모든 곡은 Youtube Content ID를 부여받고 있으므로, 특별한 언급이 없는 이상 Youtube 영상에 단순히 삽입하여 수익을 창출하거나, Youtube에서 커버를 통해 수익 창출을 하는 것은 문의 없이 허용합니다.<br/>
     - 영업장에서 단순히 재생하는 것 또한 허용합니다.<br/><br/>
