--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<div class="content">
 										<h2 class="major">Derivate Works Guideline</h2>
 										<p>
-									We are waiting for your derivate works. <br />
+									We are waiting for your derivative works. <br />
 									二次創作ガイドライン / 2차 창작 가이드라인</p>
 										<a href="https://898acf.com/guide/" class="special">Click Here</a>
 									</div>
