--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<div class="inner">
 									<a href="https://898acf.com/guide/" class="image"><img src="images/copyright.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Derivate Works Guideline</h2>
+										<h2 class="major">Derivative Works Guideline</h2>
 										<p>
 									We are waiting for your derivative works. <br />
 									二次創作ガイドライン / 2차 창작 가이드라인</p>
