--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -61,14 +61,14 @@
                                     <p>私は大変なことがあるたびに、以前成功した小さなことを思い出します。<br />この曲は、力が必要なそんな時に聞いてほしいです。<br /><br />
                                     日常から逃げ出して、「異世界」という所で魔法を求めている人々を見て、こう思いました。<br />「魔法て現実にもあるんじゃない？」<br />
                                     そこからこの曲が始まりました。たまには化物にも、たまには奇跡にもなれる全てが魔法です。<br />
-                                    出来れば、奇跡になってほしいです。<br />
-                                    
+                                    出来れば、奇跡になってほしいです。<br /><br />
+                                    MVを作りながら考えたのは、IAとLia様の関係を考え、Lia様の「鳥の詩」では「上手く飛べなかった」小鳥が立派な大人になって、また「上手く飛べない」貴方のために言う言葉を曲にすることを決めました。そこから歌詞をちょっと直して、この曲になりました。例えば、魔法使いの少女はその鳥をイメージしたキャラクターです。<br />
                                         <h3>Stream and Download</h3><a href="https://898acf.com/yo/001/st/">CLICK HERE</a>
                             </p>
 								</div>
                         <div class="container" class="video-wrap">
                                         <h3>MV</h3><p>[Youtube]<br/>
-                                    <iframe id="video" width="100%" height="315" src="https://www.youtube.com/embed/sHd9Xw59Ack" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br /><br />
+                                    <iframe id="video" width="80%" height="315" src="https://www.youtube.com/embed/sHd9Xw59Ack" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br /><br />
                                     [Niconico]<br />
                                     <script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm42532852/script?w=640&h=360"></script><noscript><a href="https://www.nicovideo.jp/watch/sm42532852">【初投稿】風になれ / IA [CeVIO AI]</a></noscript><br />
                                     </p>
