--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<section class="features">
 										<article>
 											<a href="https://898acf.com/yo/001/" class="image"><img src="images/kazeninare.jpg" alt="" /></a>
-											<h3 class="major">Kaze ni Nare feat. IA AI</h3>
+											<h3 class="major">Kaze ni Nare (feat. IA AI)</h3>
 											<p>Music and Video by YopaP<br />
                                             「Magic is by your side」
                                             <br />
