--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -68,7 +68,7 @@
 								</div>
                         <div class="container" class="video-wrap">
                                         <h3>MV</h3><p>[Youtube]<br/>
-                                    <iframe id="video" width="80%" height="315" src="https://www.youtube.com/embed/sHd9Xw59Ack" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br /><br />
+                                    <iframe id="video" width="80%" height="315" src="https://www.youtube.com/embed/YqPC9_MvTW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br /><br />
                                     [Niconico]<br />
                                     <script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm42532852/script?w=640&h=360"></script><noscript><a href="https://www.nicovideo.jp/watch/sm42532852">【初投稿】風になれ / IA [CeVIO AI]</a></noscript><br />
                                     </p>
