--- a/yo/001/st/index.html
+++ b/yo/001/st/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1;url=https://898acf.com/notyet/" />
+<meta http-equiv="refresh" content="1;url=https://ffm.to/yopap001" />
