--- a/disco/index.html
+++ b/disco/index.html
@@ -55,6 +55,17 @@
 								<p>Lots of songs will be revealed soon.</p>
 							</header>
 							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/nigete.png" alt="" />
+									</span>
+									<a href="https://898acf.com/yo/002/">
+										 <h2>[YopaP]</h2><h2>Nigete Kudasai</h2><h2>(feat. IA AI)</h2>
+										<div class="content">
+											<p>Sometimes, you have to run away.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/kazeninare.jpg" alt="" />
@@ -63,17 +74,6 @@
                                         <h2>[YopaP]</h2><h2>Kaze ni Nare</h2><h2>(feat. IA AI)</h2>
 										<div class="content">
 											<p>Magic is by your side.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/default.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Coming Soon</h2>
-										<div class="content">
-											<p>Coming Soon</p>
 										</div>
 									</a>
 								</article>
