--- a/guide/index.html
+++ b/guide/index.html
@@ -188,7 +188,8 @@
 									<header class="major">
 										<h2>WAV Files Link</h2>
 									</header>
-									<p>[2023. 08. 08] YopaP - Kaze ni Nare feat. IA AI (<a href="https://898acf.com/yo/001/inst/">Link</a>)</p>
+									<p>[2023. 08. 08] YopaP - Kaze ni Nare (feat. IA AI) (<a href="https://898acf.com/yo/001/inst/">Link</a>)<br/>
+                                    [2023. 09. 27] YopaP - Nigete Kudasai (feat. IA AI) (<a href="https://898acf.com/yo/002/inst/">Link</a>)</p>
 								</div>
 							</section>
 
