--- a/or/index.html
+++ b/or/index.html
@@ -92,7 +92,8 @@
 									<header class="major">
 										<h2>Discography</h2>
 									</header>
-									<p>[2023. 08. 08] Kaze ni Nare (feat. IA AI) - Mix & Master</p>
+									<p>[2023. 08. 08] Kaze ni Nare (feat. IA AI) - Mix & Master<br/>
+                                    [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Mix & Master</p>
 								</div>
 							</section>
                         
