--- a/guide/index.html
+++ b/guide/index.html
@@ -112,7 +112,7 @@
 <h3>II. 本文</h3>
 <b>1. いつも、原作者およびボーカルクレジット（カバーやinst.の場合はボーカルを除く）を表記し、原曲映像リンクを添付してください。 クレジットの作成方法がわからない場合は、YouTubeやNiconicoの原曲映像からそのままコピー·貼り付けてください。</b><br/><br/>
                                     <b>2. カバー</b><br/>
-                                    - カバーを許可するということは、著作権を放棄するという意思ではありません。 著作権はクリエイターまたはそれから著作権を譲り受けた者にあり、ここで<b>許可されるのはクレジット表記および原曲リンクを伴う非独占的、非商業的なカバー</b>b>であり、<b>著作権者の許諾なしの独占的または商業的なカバーは著作権侵害</b>b>であることに注意してください。 なお、音源ストリーミングまたはダウンロード方式の配布は、非商業的（無償）配布でも問い合わせなしには許可されません。<br/><br/>
+                                    - カバーを許可するということは、著作権を放棄するという意思ではありません。 著作権はクリエイターまたはそれから著作権を譲り受けた者にあり、ここで<b>許可されるのはクレジット表記および原曲リンクを伴う非独占的、非商業的なカバー</b>であり、<b>著作権者の許諾なしの独占的または商業的なカバーは著作権侵害</b>であることに注意してください。 なお、音源ストリーミングまたはダウンロード方式の配布は、非商業的（無償）配布でも問い合わせなしには許可されません。<br/><br/>
                                     - できれば、ハッシュタグで検索が出来るTwitter、YouTubeなどで<br/>
                                         <b>1) 創作物をそのまま使用したり変形して載せる場合は 「#898ACF」,<br/>
                                         2) カバーの場合は 「#898ACFCOVER」タグを付けてください。<br/>
