--- a/yo/002/index.html
+++ b/yo/002/index.html
@@ -341,6 +341,7 @@ as soon as possible<br/><br/>
 									<header class="major">
 										<h2>How to Cover and Use</h2>
 										<p><a href="http://898acf.com/guide/">CLICK HERE TO COVER AND USE</a>.</p>
+                                        <h4>(* Thumbnail illust by coffeewater can be used freely.)</h4>
 									</header>
 								</div>
 							</section>
