--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 									<p>Latest songs are here. Made by #898ACF.</p>
 									<section class="features">
 										<article>
+											<a href="https://898acf.com/yo/003/" class="image"><img src="images/daremo.png" alt="" /></a>
+											<h3 class="major">Daremo Kikanai Uta (feat. IA AI)</h3>
+											<p>Music and Video by YopaP<br />
+                                            「Based on the dream of my friend」
+                                            <br />
+                                            Released November 6 2023. Drum n Bass style.</p>
+											<a href="https://898acf.com/yo/003/" class="special">Learn more</a>
+										</article>
+										<article>
 											<a href="https://898acf.com/yo/002/" class="image"><img src="images/nigete.png" alt="" /></a>
 											<h3 class="major">Nigete Kudasai (feat. IA AI)</h3>
 											<p>Music and Video by YopaP<br />
@@ -115,14 +124,6 @@
                                             Released August 8 2023. House style.
                                             </p>
 											<a href="https://898acf.com/yo/001/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/comingsoon.jpg" alt="" /></a>
-											<h3 class="major">Coming Soon</h3>
-											<p>Coming Soon.
-                                            <br />
-                                            「Coming Soon」</p>
-											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/comingsoon.jpg" alt="" /></a>
