YO003 Credits and Inst

--- a/guide/index.html
+++ b/guide/index.html
@@ -189,7 +189,8 @@
 										<h2>WAV Files Link</h2>
 									</header>
 									<p>[2023. 08. 08] YopaP - Kaze ni Nare (feat. IA AI) (<a href="https://898acf.com/yo/001/inst/">Link</a>) 120BPM<br/>
-                                    [2023. 09. 27] YopaP - Nigete Kudasai (feat. IA AI) (<a href="https://898acf.com/yo/002/inst/">Link</a>) 180BPM</p>
+                                    [2023. 09. 27] YopaP - Nigete Kudasai (feat. IA AI) (<a href="https://898acf.com/yo/002/inst/">Link</a>) 180BPM<br/>
+                                    [2023. 11. 06] YopaP - Daremo Kikanai Uta (feat. IA AI) (<a href="https://898acf.com/yo/003/inst/">Link</a>) 180BPM</p>
 								</div>
 							</section>
 
