--- a/or/index.html
+++ b/or/index.html
@@ -93,7 +93,8 @@
 										<h2>Discography</h2>
 									</header>
 									<p>[2023. 08. 08] Kaze ni Nare (feat. IA AI) - Mix & Master<br/>
-                                    [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Mix & Master</p>
+                                    [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Mix & Master<br/>
+                                    [2023. 11.06] Daremo Kikanai Uta (feat. IA AI) - Mix & Master</p>
 								</div>
 							</section>
                         
