--- a/yo/index.html
+++ b/yo/index.html
@@ -91,7 +91,8 @@
 										<h2>Discography</h2>
 									</header>
 									<p>[2023. 08. 08] Kaze ni Nare (feat. IA AI) - Music & Video<br/>
-                                    [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Music & Video</p>
+                                    [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Music & Video<br/>
+                                    [2023. 11. 06] Daremo Kikanai Uta (feat. IA AI) - Music & Video</p>
 								</div>
 							</section>
                         
