--- a/yo/001/index.html
+++ b/yo/001/index.html
@@ -56,7 +56,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Kaze ni Nare (feat. IA AI)</h2>
-										<p>Magic is by your side.</p>
+										<h3>Magic is by your side.</h3>
 									</header>
                                     <p>私は大変なことがあるたびに、以前成功した小さなことを思い出します。<br />この曲は、力が必要なそんな時に聞いてほしいです。<br /><br />
                                     日常から逃げ出して、「異世界」という所で魔法を求めている人々を見て、こう思いました。<br />「魔法て現実にもあるんじゃない？」<br />
