--- a/yo/002/index.html
+++ b/yo/002/index.html
@@ -56,7 +56,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Nigete Kudasai (feat. IA AI)</h2>
-										<p>Sometimes, you have to run away.</p>
+										<h3>Sometimes, you have to run away.</h3>
 									</header>
                                     <p>逃げるのは、自分の命を守るためのことです。だから逃げて「下さい」という表現はおかしいですが、おかしくない瞬間があります。在難現場です。人生が災難なら、たまには逃げてください。<br />
                                         <h3>Stream and Download</h3><a href="https://898acf.com/yo/002/st/">CLICK HERE</a>
