--- a/yo/003/index.html
+++ b/yo/003/index.html
@@ -56,9 +56,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Daremo Kikanai Uta (feat. IA AI)</h2>
-										<p>Based on the dream of my friend.</p>
+										<h3>Based on the dream of my friend.</h3>
 									</header>
-                                    <p>2022年10月、あるボカロPがいなくなりました。私の友達だった彼は、私に相談をしに来て、いろんなことを話して、すぐいなくなりました。<br />
+                                    <p>2022年10月、あるボカロPが亡くなりました。私の友達だった彼は、私に相談をしに来て、いろんなことを話して、すぐそうなりました。<br />
                                     その後の予約メールには、IAのシリアルナンバー、彼の「夢」の話、そしてお願いが書かれていました。夢でIAから怒られたこと、そして自分の夢「嫌われずに芸術をしたい」みたいな、いるんな事がバラバラだったメールでしたが、最後の願い事は「君がIAの声で曲を作ってくれ」。音楽を諦めてただの趣味としてしていた私にはちょっと重いかも知れませんが、昔の感覚でやっています。<br />
                                     P名も知らない彼を記憶するために、この曲を捧げます。この曲で気持ちが悪くなった方々、そして傷ついた方々にはちゃんと謝りたいです。申し訳ございません。<br />
                                         <h3>Stream and Download</h3><a href="https://898acf.com/yo/003/st/">CLICK HERE</a>
