--- a/disco/index.html
+++ b/disco/index.html
@@ -55,7 +55,18 @@
 								<p>Lots of songs will be revealed soon.</p>
 							</header>
 							<section class="tiles">
-								<article class="style4">
+								<article class="style5">
+									<span class="image">
+										<img src="images/nightflight.png" alt="" />
+									</span>
+									<a href="https://898acf.com/yo/004/">
+										<h2>[YopaP]</h2><h2>Yakan Hikou</h2><h2>(feat. OTOYOME, <br/>IA AI)</h2>
+										<div class="content">
+											<p>I can find you in the mirror.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style4">
 									<span class="image">
 										<img src="images/daremo.png" alt="" />
 									</span>
@@ -89,17 +100,6 @@
 									</a>
 								</article>
 								<article class="style4">
-									<span class="image">
-										<img src="images/default.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Coming Soon</h2>
-										<div class="content">
-											<p>Coming Soon</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
 									<span class="image">
 										<img src="images/default.jpg" alt="" />
 									</span>
