--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 									<p>Latest songs are here. Made by #898ACF.</p>
 									<section class="features">
 										<article>
+											<a href="https://898acf.com/yo/004/" class="image"><img src="images/nightflight.png" alt="" /></a>
+											<h3 class="major">Yakan Hikou (feat. OTOYOME, IA AI)</h3>
+											<p>Music and Video by YopaP<br />
+                                            「I can find you in the mirror」
+                                            <br />
+                                            Released December 11 2023. J-POP style.</p>
+											<a href="https://898acf.com/yo/004/" class="special">Learn more</a>
+										</article>
+                                        <article>
 											<a href="https://898acf.com/yo/003/" class="image"><img src="images/daremo.png" alt="" /></a>
 											<h3 class="major">Daremo Kikanai Uta (feat. IA AI)</h3>
 											<p>Music and Video by YopaP<br />
@@ -124,14 +133,6 @@
                                             Released August 8 2023. House style.
                                             </p>
 											<a href="https://898acf.com/yo/001/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/comingsoon.jpg" alt="" /></a>
-											<h3 class="major">Coming Soon</h3>
-											<p>Coming Soon.
-                                            <br />
-                                            「Coming Soon」</p>
-											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
