--- a/yo/004/index.html
+++ b/yo/004/index.html
@@ -52,7 +52,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/Head.png" alt="" />
+									<img src="images/head.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
