--- a/disco/index.html
+++ b/disco/index.html
@@ -55,7 +55,18 @@
 								<p>Lots of songs will be revealed soon.</p>
 							</header>
 							<section class="tiles">
-								<article class="style5">
+                                <article class="style5">
+									<span class="image">
+										<img src="images/mesugaki.png" alt="" />
+									</span>
+									<a href="https://898acf.com/yo/005/">
+										 <h2>[YopaP]</h2><h2>Mesugaki Santa no Shoushitsu</h2><h2>(feat. IA AI)</h2>
+										<div class="content">
+											<p>Bad child faces the bad end.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
 									<span class="image">
 										<img src="images/nightflight.png" alt="" />
 									</span>
@@ -144,17 +155,6 @@
 									</a>
 								</article>
 								<article class="style1">
-									<span class="image">
-										<img src="images/default.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Coming Soon</h2>
-										<div class="content">
-											<p>Coming Soon</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
 									<span class="image">
 										<img src="images/default.jpg" alt="" />
 									</span>
