--- a/guide/index.html
+++ b/guide/index.html
@@ -192,6 +192,7 @@
                                     [2023. 09. 27] YopaP - Nigete Kudasai (feat. IA AI) (<a href="https://898acf.com/yo/002/inst/">Link</a>) 180BPM<br/>
                                     [2023. 11. 06] YopaP - Daremo Kikanai Uta (feat. IA AI) (<a href="https://898acf.com/yo/003/inst/">Link</a>) 180BPM<br/>
                                     [2023. 12. 11] YopaP - Yakan Hikou (feat. OTOYOME, IA AI) (<a href="https://898acf.com/yo/004/inst/">Link</a>) 134BPM</p>
+                                    [2024. 01. 05] YopaP - Mesugaki Santa no Shoushitsu (feat. OTOYOME, IA AI) (<a href="https://898acf.com/yo/005/inst/">Link</a>) 134BPM</p>
 								</div>
 								</div>
 							</section>
