--- a/or/index.html
+++ b/or/index.html
@@ -96,6 +96,7 @@
                                     [2023. 09. 27] Nigete Kudasai (feat. IA AI) - Mix & Master<br/>
                                     [2023. 11. 06] Daremo Kikanai Uta (feat. IA AI) - Mix & Master<br/>
                                     [2023. 12. 11] Yakan Hikou (feat. OTOYOME, IA AI) - Mix & Master</p>
+                                    [2024. 01. 05] Mesugaki Santa no Shoushitsu (feat. OTOYOME, IA AI) - Mix & Master</p>
 								</div>
 							</section>
                         
