--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
 									<p>Latest songs are here. Made by #898ACF.</p>
 									<section class="features">
 										<article>
+											<a href="https://898acf.com/yo/001/" class="image"><img src="images/mesugaki.jpg" alt="" /></a>
+											<h3 class="major">Mesugaki Santa no Shoushitsu (feat. IA AI)</h3>
+											<p>Music and Video by YopaP<br />
+                                            「Bad child faces the bad end」
+                                            <br />
+                                            Released January 5 2024. Jersey Club style.
+                                            </p>
+											<a href="https://898acf.com/yo/005/" class="special">Learn more</a>
+										</article>
+                                        <article>
 											<a href="https://898acf.com/yo/004/" class="image"><img src="images/nightflight.png" alt="" /></a>
 											<h3 class="major">Yakan Hikou (feat. OTOYOME, IA AI)</h3>
 											<p>Music and Video by YopaP<br />
@@ -123,16 +133,6 @@
                                             <br />
                                             Released September 27 2023. Japanese Idolish Dance Style.</p>
 											<a href="https://898acf.com/yo/002/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="https://898acf.com/yo/001/" class="image"><img src="images/kazeninare.jpg" alt="" /></a>
-											<h3 class="major">Kaze ni Nare (feat. IA AI)</h3>
-											<p>Music and Video by YopaP<br />
-                                            「Magic is by your side」
-                                            <br />
-                                            Released August 8 2023. House style.
-                                            </p>
-											<a href="https://898acf.com/yo/001/" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
