--- a/yo/005/index.html
+++ b/yo/005/index.html
@@ -196,7 +196,7 @@ the way I wanted<br/><br/>
 
 마녀가 된다면<br/>
 사람들의 소원을 이뤄줄 수 있는<br/>
-좋은 애가 될 수도 있을까<br/><br/>
+착한 아이가 될 수도 있을까<br/><br/>
 
 벌을 받게 된다면<br/>
 좋은 애가 될 수 있는 건가요<br/>
